@@ -290,7 +290,7 @@ static 	char* keywords[] = { NULL };
 		return NULL;
 	}
 
-	return PyObjCBool_FromLong(PyObjC_VerboseLevel);
+	return PyBool_FromLong(PyObjC_VerboseLevel);
 }
 
 
@@ -828,8 +828,8 @@ init_objc(void)
 	PyDict_SetItemString(d, "informal_protocol", (PyObject*)&PyObjCInformalProtocol_Type);
 	PyDict_SetItemString(d, "function", (PyObject*)&PyObjCFunc_Type);
 	PyDict_SetItemString(d, "IMP", (PyObject*)&PyObjCIMP_Type);
-	PyDict_SetItemString(d, "YES", PyObjCBool_FromLong(1));
-	PyDict_SetItemString(d, "NO", PyObjCBool_FromLong(0));
+	PyDict_SetItemString(d, "YES", PyBool_FromLong(1));
+	PyDict_SetItemString(d, "NO", PyBool_FromLong(0));
 
 	if (PyObjCUtil_Init(m) < 0) return;
 	if (PyObjCAPI_Register(d) < 0) return;
